src/objects/DeviceRelationship__c.object
<CustomObject>
    <fields>
        <fullName>EndDate__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MainDevice__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Main Device</label>
        <referenceTo>Device__c</referenceTo>
        <relationshipLabel>Device Relationships (Main Device)</relationshipLabel>
        <relationshipName>DeviceRelationships</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>StartDate__c</fullName>
        <defaultValue>TODAY()</defaultValue>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SubDevice__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sub Device</label>
        <referenceTo>Device__c</referenceTo>
        <relationshipLabel>Device Relationships (Sub Device)</relationshipLabel>
        <relationshipName>DeviceRelationshipSubs</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Device Relationship</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>DR-{000000000}</displayFormat>
        <label>Device Relationship Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Device Relationships</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>EndDateCannotBeBeforeStartDate</fullName>
        <active>true</active>
        <description>Validates that a custom field called End Date does not come before another custom field called Start Date.</description>
        <errorConditionFormula>StartDate__c &gt; EndDate__c</errorConditionFormula>
        <errorDisplayField>StartDate__c</errorDisplayField>
        <errorMessage>End Date cannot be before Start Date.</errorMessage>
    </validationRules>
</CustomObject>